# vibeguard

./: .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CRITERIA.md  AGENTS.md  AI_CODING_RULES.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  DEPENDENCY_POLICY.md  DEPLOYMENT.md  DEVELOPMENT.md  ISSUE_ORDER.md  LICENSE  Makefile  Makefile.bad  Makefile.bak  OBSERVABILITY.md  README.md  REPO_CONTRACT.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/actions/vibeguard/: action.yml
.github/workflows/: verify.yml
.pc-home/: db.db
SPECS/: README.md  TEMPLATE.md
apps/cli/: pyproject.toml
apps/cli/tests/: conftest.py  test_audit_pack.py  test_cli_check.py  test_cli_init.py  test_cli_smoke.py  test_findings.py  test_gate_runner.py  test_github_action_docs.py  test_path_scope.py  test_policy_loader.py  test_versioning.py  test_vg002_vg003.py  test_vg004_vg005.py  test_vg006_threat_model.py  test_wizard_compile.py
apps/cli/vibeguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/cli/vibeguard_cli/: main.py
audit-pack/: README.md
audit-pack/templates/: manifest.json
docs/: BOOTSTRAP_CHECKLIST.md  GITHUB_ACTION.md  LOGGING_REDACTION.md  RELEASE.md  RELEASE_TEMPLATE.md
policies/: SCHEMA.md
pre_commit/: __init__.py  __main__.py
spec/: AUDIT_PACK.md  GATES.md  ROADMAP.md  VIBEGUARD_CORE.md  WIZARD.md
tools/: create_v01_backlog.sh
tools/ai/: ai-brief.sh
wizard/: template.yaml
(+1 files in other folders)
