[project]
name = "vibeguard"
version = "0.1.0"
description = "VibeGuard CLI - policy gates + audit pack export for vibe coding teams"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
vibeguard = "vibeguard_cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
